# vennactors

./: .gitignore
client/: Cargo.toml  index.html
server/: Cargo.toml
server/src/: api_structs.rs  filters.rs  handlers.rs  main.rs  tmdb_client.rs
shared/: Cargo.toml
shared/src/: lib.rs
