[package]
name = "server"
version = "0.1.0"
authors = ["bkeeneykid <bkeeneykid@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
flexi_logger = "0.17"
app_dirs2 = "2.3.1"
log = "0.4"
warp = "0.3.0"
tokio = { version = "1", features = ["full"] }
